vuejs/vuejs-tests/testData/highlighting/typeScriptTypesAreNotResolvedIfECMA5Script.vue
<script>
function ds(a : <error descr="Types are not supported by current JavaScript version"><weak_warning descr="Unresolved type string">string</weak_warning></error>) {
  encodeURI(a);
}
ds('a');
</script>